SAK-15721
git-svn-id: https://source.sakaiproject.org/svn/reset-pass/trunk@57686 66ffb92e-73f9-0310-93c1-f5514f145a0a